# aicommit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/commit_ai/: ai_handler.py  cli.py  git_utils.py
